# executorch-rs

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
crates/executorch/: Cargo.toml  build.rs
crates/executorch-macros/: Cargo.toml
crates/executorch-macros/src/: lib.rs
crates/executorch/examples/: xnn_link_smoke.rs
crates/executorch/src/: lib.rs  mod.rs
crates/executorch/src/backends/: mod.rs
crates/executorch/src/backends/xnnpack/: mod.rs
crates/executorch/src/custom_ops/: mod.rs  op_istft.rs  op_layer_norm.rs  parallel.rs
crates/executorch/src/devtools/: mod.rs
crates/executorch/src/devtools/bundled_program/: mod.rs
crates/executorch/src/extension/: mod.rs
crates/executorch/src/extension/data_loader/: buffer_data_loader.rs  file_data_loader.rs  file_descriptor_data_loader.rs  mman.rs  mman_windows.rs  mmap_data_loader.rs  mod.rs  shared_ptr_data_loader.rs  testing.rs
crates/executorch/src/extension/flat_tensor/: flat_tensor_data_map.rs  mod.rs
crates/executorch/src/extension/memory_allocator/: malloc_memory_allocator.rs  mod.rs
crates/executorch/src/extension/module/: bundled_module.rs  mod.rs  module.rs
crates/executorch/src/extension/tensor/: mod.rs  tensor_accessor.rs  tensor_ptr.rs  tensor_ptr_maker.rs
crates/executorch/src/kernels/: mod.rs  registry.rs
crates/executorch/src/kernels/optimized/: mod.rs  register.rs
crates/executorch/src/runtime/: mod.rs
crates/executorch/src/runtime/backend/: backend_execution_context.rs  backend_init_context.rs  backend_option_context.rs  backend_options_map.rs  interface.rs  mod.rs  options.rs
crates/executorch/src/runtime/core/: array_ref.rs  data_loader.rs  device_allocator.rs  device_memory_buffer.rs  error.rs  evalue.rs  event_tracer.rs  event_tracer_hooks.rs  event_tracer_hooks_delegate.rs  freeable_buffer.rs  function_ref.rs  hierarchical_allocator.rs  memory_allocator.rs  mod.rs  named_data_map.rs  result.rs  span.rs  tag.rs  tensor_layout.rs  tensor_shape_dynamism.rs
crates/executorch/src/runtime/executor/: memory_manager.rs  merged_data_map.rs  method.rs  method_meta.rs  mod.rs  platform_memory_allocator.rs  program.rs  program_validation.rs  pte_data_map.rs  tensor_parser.rs  tensor_parser_aten.rs  tensor_parser_exec_aten.rs  tensor_parser_portable.rs
crates/executorch/src/runtime/kernel/: kernel_runtime_context.rs  mod.rs  operator_registry.rs  (+1 more)
crates/executorch/src/schema/: extended_header.rs  mod.rs
(+657 files in other folders)
