[package]
name = "executorch-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for the ExecuTorch Rust port (kernel unboxing/registration codegen)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
